Wrapper: add '--add-opens=java.base/sun.net.dns=ALL-UNNAMED' to avoid reflection warning